[gd_scene load_steps=22 format=3 uid="uid://cwwrdaodwfflq"]

[ext_resource type="Script" path="res://src/map_item.gd" id="1_80s1p"]
[ext_resource type="Texture2D" uid="uid://d3m0oo7esa8g" path="res://assets/rtf_egg.png" id="2_471w3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6alf3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xwrnl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_15v0h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aq1xa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2hrdl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ajfql"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1qdyp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hbifr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kirrn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sihkm"]

[sub_resource type="LabelSettings" id="LabelSettings_wk2yk"]
font_size = 32

[sub_resource type="Animation" id="Animation_0ol5d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.301961)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Center/Sprite2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 2000)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Center/Sprite2D:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Center/Sprite2D:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer/Control2:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasLayer/Control2/ColorRect:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nbe5b"]
resource_name = "egg_closing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.37841, 0.307786),
"update": 0,
"values": [Color(0, 0, 0, 0.313726), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_lymaq"]
resource_name = "egg_opening_1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(0.307786, 0.0824692),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.313726)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_p3dnq"]
resource_name = "egg_opening_2"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Center/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.2, 1.33333, 1.46667),
"transitions": PackedFloat32Array(-5, 2.14355, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 2000), Vector2(0, -151), Vector2(1, 11), Vector2(-1, -86), Vector2(-3, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Center/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.2, 1.33333, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Center/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.2, 1.33333, 1.46667),
"transitions": PackedFloat32Array(1, 4.75683, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2, 2), Vector2(2.848, 1.60584), Vector2(1.872, 2.57664), Vector2(2, 2.01095)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Control2/ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.2, 1.83333),
"transitions": PackedFloat32Array(1.8025, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Control2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_56fj0"]
resource_name = "egg_opening_3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.866667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control2/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_455an"]
resource_name = "egg_take"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8, 0.966667),
"transitions": PackedFloat32Array(2, 0.4, 2, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-0.99999, 18.75), Vector2(13, -41), Vector2(5.5, 19.125), Vector2(1, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8, 0.966667),
"transitions": PackedFloat32Array(0.2, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8, 0.966667),
"transitions": PackedFloat32Array(2, 0.3, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.232, 0.726277), Vector2(0.824, 1.27372), Vector2(1.048, 0.74635), Vector2(1.048, 0.994525)]
}

[sub_resource type="Animation" id="Animation_4rkct"]
resource_name = "egg_take_new"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8, 0.966667),
"transitions": PackedFloat32Array(2, 0.4, 2, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-0.99999, 18.75), Vector2(13, -41), Vector2(5.5, 19.125), Vector2(1, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8, 0.966667),
"transitions": PackedFloat32Array(2, 0.3, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.232, 0.726277), Vector2(0.824, 1.27372), Vector2(1.048, 0.74635), Vector2(1.048, 0.994525)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c0kbh"]
_data = {
"RESET": SubResource("Animation_0ol5d"),
"egg_closing": SubResource("Animation_nbe5b"),
"egg_opening_1": SubResource("Animation_lymaq"),
"egg_opening_2": SubResource("Animation_p3dnq"),
"egg_opening_3": SubResource("Animation_56fj0"),
"egg_take": SubResource("Animation_455an"),
"egg_take_new": SubResource("Animation_4rkct")
}

[node name="MapItem" type="Node2D"]
script = ExtResource("1_80s1p")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -4)
scale = Vector2(1.048, 0.994525)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Control"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 0
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_6alf3")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_xwrnl")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_15v0h")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_aq1xa")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_2hrdl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ajfql")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_1qdyp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hbifr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_kirrn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_sihkm")
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.301961)

[node name="Control2" type="Control" parent="CanvasLayer"]
visible = false
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Text" type="Control" parent="CanvasLayer"]
visible = false
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Text"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="Container" parent="CanvasLayer/Text/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Text/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_wk2yk")

[node name="Center" type="Node2D" parent="CanvasLayer"]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Center"]
position = Vector2(0, 2000)
scale = Vector2(2, 2)
texture = ExtResource("2_471w3")

[node name="InfoCanvasLayer" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c0kbh")
}

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
